# helloworld/openapi.yaml
@@ -3,8 +3,7 @@
 
 openapi: 3.0.3
 info:
-    title: Greeter API
-    description: The greeting service definition.
+    title: ""
     version: 0.0.1
 paths:
     /helloworld/test/nihao:
@@ -44,8 +43,144 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/helloworld.v1.HelloReply'
+    /user:
+        get:
+            tags:
+                - User
+            operationId: User_GetUser
+            parameters:
+                - name: id
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.helloworld.v1.GetUserReply'
+    /user/add:
+        post:
+            tags:
+                - User
+            operationId: User_CreateUser
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.helloworld.v1.CreateUserRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.helloworld.v1.CreateUserReply'
+    /user/del:
+        post:
+            tags:
+                - User
+            operationId: User_DeleteUser
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.helloworld.v1.DeleteUserRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.helloworld.v1.DeleteUserReply'
+    /user/list:
+        get:
+            tags:
+                - User
+            operationId: User_ListUser
+            parameters:
+                - name: status
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.helloworld.v1.ListUserReply'
+    /user/update:
+        post:
+            tags:
+                - User
+            operationId: User_UpdateUser
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.helloworld.v1.UpdateUserRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.helloworld.v1.UpdateUserReply'
 components:
     schemas:
+        api.helloworld.v1.CreateUserReply:
+            type: object
+            properties:
+                user:
+                    $ref: '#/components/schemas/api.helloworld.v1.CreateUserRequest'
+        api.helloworld.v1.CreateUserRequest:
+            type: object
+            properties:
+                name:
+                    type: string
+                passd:
+                    type: string
+                email:
+                    type: string
+        api.helloworld.v1.DeleteUserReply:
+            type: object
+            properties: {}
+        api.helloworld.v1.DeleteUserRequest:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
+        api.helloworld.v1.GetUserReply:
+            type: object
+            properties:
+                user:
+                    $ref: '#/components/schemas/api.helloworld.v1.CreateUserRequest'
+        api.helloworld.v1.ListUserReply:
+            type: object
+            properties:
+                userList:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/api.helloworld.v1.CreateUserRequest'
+        api.helloworld.v1.UpdateUserReply:
+            type: object
+            properties: {}
+        api.helloworld.v1.UpdateUserRequest:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
+                date:
+                    $ref: '#/components/schemas/api.helloworld.v1.CreateUserRequest'
         helloworld.v1.HelloReply:
             type: object
             properties:
@@ -64,3 +199,5 @@ components:
                     type: string
 tags:
     - name: Greeter
+      description: The greeting service definition.
+    - name: User
